...
        }

        if (manageController != nil) {
            manageController!.showWindow(sender)
            manageController!.window?.orderFrontRegardless()
        }
        if sender.title == "Import Kubeconfig File" {
            if let a = manageController?.contentViewController as? ManageViewController {
                a.lockButtonAction(self)
            }
        }
    }

...
            alertUserWithWarning(message: "Could not parse selected kubeconfig file\n \(error)")
        }
    }
    
    func ConstructInitMenu(menu: NSMenu){
        menu.removeAllItems()
        let selectConfigMenuItem = NSMenuItem(title: "Select kubeconfig file", action:  #selector(selectKubeconfig(_:)), keyEquivalent: "c")
        selectConfigMenuItem.target = self
        menu.addItem(selectConfigMenuItem)
        
        menu.addItem(NSMenuItem.separator())
        menu.addItem(NSMenuItem(title: "Quit", action: #selector(NSApplication.terminate(_:)), keyEquivalent: "q"))
    }
...
        let centerParagraphStyle = NSMutableParagraphStyle.init()
        centerParagraphStyle.alignment = .center
        
        // Current Context Title
        let currentContextTitleItem = NSMenuItem(title: "", action: #selector(logClick(_:)), keyEquivalent: "")
        currentContextTitleItem.target=self
        let contextTitle = NSAttributedString.init(string: "Current Context", attributes: [NSAttributedString.Key.paragraphStyle: centerParagraphStyle, NSAttributedString.Key.font: NSFont.boldSystemFont(ofSize: 14)])
        currentContextTitleItem.attributedTitle = contextTitle
        menu.addItem(currentContextTitleItem)
        
        // Current Context Text
        let switchContextSubmenu = NSMenu()
        
...
        menu.addItem(currentContextTextItem)
        
        // Seperator
        menu.addItem(NSMenuItem.separator())
        
        // Switch Context
        let switchContextMenuItem = NSMenuItem(title: "Switch Context", action: nil, keyEquivalent: "c")
        switchContextMenuItem.target = self
        menu.addItem(switchContextMenuItem)
        // Switch Context Submenu
        menu.setSubmenu(switchContextSubmenu, for: switchContextMenuItem)
        
        // Import Kubeconfig file
...
        }

        let importKubeconfigMenuItem = NSMenuItem(title: "Import Kubeconfig File", action: importAction, keyEquivalent: "i")
        importKubeconfigMenuItem.target = self
        menu.addItem(importKubeconfigMenuItem)
        
        let manageContextMenuItem = NSMenuItem(title: "Manage Contexts", action: #selector(openManagement(_:)), keyEquivalent: "m")
        manageContextMenuItem.target = self
        menu.addItem(manageContextMenuItem)
        
        menu.addItem(NSMenuItem.separator())
        menu.addItem(NSMenuItem(title: "Quit", action: #selector(NSApplication.terminate(_:)), keyEquivalent: "q"))
    }
    
    func alertUserWithWarning(message: String) {
        let alert = NSAlert()
        alert.icon = NSImage.init(named: NSImage.cautionName)
        alert.messageText = message
        alert.addButton(withTitle: "OK")
        alert.runModal()
    }
}



